Pricing updates & font kit update

--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -18,9 +18,14 @@
         <link rel="icon" href="./images/favicon.ico" />
         <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="stylesheet" defer href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-        <link rel="stylesheet" defer href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script src="./scripts/scripts.js"></script>
-        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+
+        <!-- Font Awesome for Deployment -->
+        <script src="https://kit.fontawesome.com/1f7c331935.js" crossorigin="anonymous"></script>
+
+        <!-- Font Awesome for Development - COMMENT OUT WHEN LIVE -->
+        <!-- <link rel="stylesheet" defer href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script> -->
     </head>
 
     <body>
@@ -151,6 +156,7 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-badge-check"></i>&nbsp;
                                     Excellence in Everything
                                 </p>
                             </header>
@@ -165,6 +171,7 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-handshake"></i>&nbsp;
                                     Integrity and Honesty
                                 </p>
                             </header>
@@ -179,6 +186,7 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-people-roof"></i>&nbsp;
                                     Client Focused
                                 </p>
                             </header>
@@ -193,6 +201,7 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-landmark"></i>&nbsp;
                                     Accountability
                                 </p>
                             </header>
