--- a/services.html
+++ b/services.html
@@ -18,9 +18,14 @@
         <link rel="icon" href="./images/favicon.ico" />
         <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="stylesheet" defer href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-        <link rel="stylesheet" defer href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script src="./scripts/scripts.js"></script>
-        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+
+        <!-- Font Awesome for Deployment -->
+        <script src="https://kit.fontawesome.com/1f7c331935.js" crossorigin="anonymous"></script>
+
+        <!-- Font Awesome for Development - COMMENT OUT WHEN LIVE -->
+        <!-- <link rel="stylesheet" defer href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script> -->
     </head>
 
     <body>
@@ -127,22 +132,22 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Presently, we offer three main services at Kingdom Application Solutions LLC: hybrid mobile application development, website design and development, and graphic design work for small businesses, churches, ministries, missionaries, and non-profit organizations. Each of these services has the goal of glorifying God through their creation. Click the link in each card below for more information for each of the services we offer.
+                    Presently, we offer three main services at Kingdom Application Solutions LLC: mobile application development, website design and development, and graphic design work for small businesses, churches, ministries, missionaries, and non-profit organizations. Each of these services has the goal of glorifying God through their creation. Click the link in each card below for more information for each of the services we offer.
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-mobile-screen"></i>
+                                    <i class="fa-solid fa-mobile-screen"></i>&nbsp;
                                     App Development
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content justify">
-                                    We offer hybrid mobile app development for small businesses, churches, ministries, missionaries, and non-profit organizations that wouldn't otherwise be able to have a mobile app presense. Our aim is to bring quality mobile app development to your organization at an affordable price.
+                                    We offer both progressive web apps (PWAs) and hybrid mobile app development for small businesses, churches, ministries, missionaries, and non-profit organizations that wouldn't otherwise be able to have a mobile app presense. Our aim is to bring quality mobile app development to your organization at an affordable price.
                                     <br><br>
-                                    Click the link to see more information about pricing for <u><a href="https://kingdomappsolutions.tech/apps.html">custom mobile app development</a></u>. <br><br><br>
+                                    Click the link to see more information about pricing for our <u><a href="https://kingdomappsolutions.tech/apps.html">PWA and hybrid mobile app development</a></u>. <br><br><br>
                                 </div>
                             </div>                  
                         </div>
@@ -152,7 +157,7 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-laptop"></i>
+                                    <i class="fa-solid fa-laptop"></i>&nbsp;
                                     Website Development
                                 </p>
                             </header>
@@ -168,7 +173,7 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-compass-drafting"></i>
+                                    <i class="fa-solid fa-compass-drafting"></i>&nbsp;
                                     Graphic Design
                                 </p>
                             </header>
