--- a/websites.html
+++ b/websites.html
@@ -18,9 +18,14 @@
         <link rel="icon" href="./images/favicon.ico" />
         <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="stylesheet" defer href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-        <link rel="stylesheet" defer href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script src="./scripts/scripts.js"></script>
-        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+        
+        <!-- Font Awesome for Deployment -->
+        <script src="https://kit.fontawesome.com/1f7c331935.js" crossorigin="anonymous"></script>
+
+        <!-- Font Awesome for Development - COMMENT OUT WHEN LIVE -->
+        <!-- <link rel="stylesheet" defer href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script> -->
     </head>
 
     <body>
@@ -132,7 +137,7 @@
                 <p></p>
                 <h2 class="subtitle privacy-h2">
                     A custom website for your small business, church, ministry, mission, or non-profit organization can enable you to effectively communicate with your customers, congregation, ministry target area, mission field, or donors. Listed below are the website development packages Kingdom Application Solutions LLC offers to get your organizational website up and running. You can choose from a robust, custom website that increases search engine optimization and other website metrics to get your organization noticed or a simple content management system (CMS). Contact us through the contact page if you are interested in website development for your organization.
-                </h2><br>
+                </h2><hr>
                 <h1 class="title">
                     Pricing
                 </h1>
@@ -141,17 +146,18 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-code"></i>
-                                    Custom Development
+                                    <i class="fa-solid fa-code"></i>&nbsp;
+                                    Website Development
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
+                                    <h2><b>$50/mo.</b></h2>
                                     <h3>No setup fee!</h3>
-                                    <h3>$100 monthly service which includes: <br><br><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees, and Periodic Updates</b></h3>
-                                    <h3>Twenty (20) page limit</h3>
-                                    <h3>$100 per page for development <br> over the 20 page limit as a one-time charge</h3>
-                                    <h3>Free annual hosting renewal!</h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees, and Periodic Updates</b></h3>
+                                    <h3>Fifteen (15) page limit</h3>
+                                    <h3>$50 per page for development <br> over the 15 page limit as a one-time charge</h3>
+                                    <h3>$50 for annual hosting renewal</h3>
                                     <h3><b><i>BEST OVERALL VALUE!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3UcGXTz" target="_blank"><b>Get Started!</b></a>
@@ -165,20 +171,23 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-desktop"></i>
-                                    CMS Development
+                                    <i class="fa-solid fa-star"></i>&nbsp;
+                                    App & Website Bundle
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
+                                    <h2><b>$50/mo.</b></h2>
                                     <h3>No setup fee!</h3>
-                                    <h3>$50 monthly service which includes: <br><br> <b>Content Management Website Development, Graphic Design, Search Engine Optimization, Domain Setup, Hosting Fees, and Periodic Updates</b></h3>
-                                    <h3>Ten (10) page limit</h3>
-                                    <h3>$100 per page for development <br> over the 10 page limit as a one-time charge</h3>
-                                    <h3>$50 per year for hosting renewal!</h3>
-                                    <h3><b><i>BEST VALUE FOR QUICK DEVELOPMENT!</i></b></h3><br>
+                                    <h3>Price is per app and website</h3>
+                                    <h3>Development for either PWA or Hybrid and Website</h3>
+                                    <h3>Deployment to the app stores and online</h3>
+                                    <h3>Same features as PWA & Hybrid App Plan</h3>
+                                    <h3>Same features as Website Development Plan</h3>
+                                    <h3>Periodic updates made as needed to publish updated content.</h3>
+                                    <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3QWIRES" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button" href="https://bit.ly/3BJp4Dx" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -189,16 +198,16 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-laptop-code"></i>
+                                    <i class="fa-solid fa-laptop-code"></i>&nbsp;
                                     One-Time Development
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
+                                    <h2><b>$100 per page</b></h2>
                                     <h3>$100 one-time setup fee</h3>
-                                    <h3>Package includes: <br><br> <b>Content Management Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
                                     <h3>Ten (10) page minimum</h3>
-                                    <h3>$100 per page for development <br> for unlimited pages</h3>
                                     <h3>Optional $50 per month for maintenance and updates</h3>
                                     <h3><b><i>BEST VALUE FOR SELF MANAGEMENT!</i></b></h3><br>
                                     <div class="buttons is-centered">
@@ -208,22 +217,20 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="columns">
-                    <div class="column is-one-fifth"></div>
                     <div class="column">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-laptop-code"></i>
+                                    <i class="fa-regular fa-rectangle-code"></i>&nbsp;
                                     Landing Page
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
+                                    <h2><b>$500 for Development</b></h2>
                                     <h3>$100 one-time setup fee</h3>
-                                    <h3>Package includes: <br><br> <b>Content Management Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
-                                    <h3>$500 for development</h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
+                                    <h3>$50 per year for hosting</h3>
                                     <h3><b><i>BEST VALUE FOR A SIMPLE ONE-PAGE SITE!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3yfJTFk" target="_blank"><b>Get Started!</b></a>
@@ -232,8 +239,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="column is-one-fifth"></div>
-                </div>
             </div>     
         </section>
 
