--- a/apps.html
+++ b/apps.html
@@ -18,9 +18,14 @@
         <link rel="icon" href="./images/favicon.ico" />
         <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="stylesheet" defer href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-        <link rel="stylesheet" defer href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script src="./scripts/scripts.js"></script>
-        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+
+        <!-- Font Awesome for Deployment -->
+        <script src="https://kit.fontawesome.com/1f7c331935.js" crossorigin="anonymous"></script>
+
+        <!-- Font Awesome for Development - COMMENT OUT WHEN LIVE -->
+        <!-- <link rel="stylesheet" defer href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script> -->
     </head>
 
     <body>
@@ -127,33 +132,48 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Hybrid mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring affordable mobile app development to small businesses, medium-sized organizations, churches, ministries, missionaries, and religious non-profit organizations. Often mobile app development costs tens of thousands of dollars which smaller organizations cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
-                </h2><br>
+                    Mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring affordable mobile app development to small businesses, medium-sized organizations, churches, ministries, missionaries, and religious non-profit organizations. Often mobile app development costs tens of thousands of dollars which smaller organizations cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
+                </h2>
                 <p></p>
                 <h1 class="title">
-                    Custom App Development
+                    Progressive Web App Development
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A custom hybrid mobile app for your organization can enable you to effectively communicate with your customers, congregation, ministry target area, mission field, or within your organization. Listed below are the custom app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to both major app stores. Contact us through the contact page if you are interested in custom app development.
-                </h2><br>
+                    A Progressive Web App (PWA) for your organization can enable you to effectively communicate with your customers, congregation, ministry target area, mission field, or within your organization. PWAs are lighter than hybrid mobile apps, are installed from a web browser rather than an app store, and allow for more instant updates without app store waiting times. PWAs are also easier to find through web searches than hybrid apps. PWAs can do much of the same things hybrid apps can do including receive push notifications and utilize some device hardware. Progressive Web Apps are becoming much more popular especially considering that 51% of smartphone users have downloaded zero apps from app stores each month. Some examples of organizations using PWAs include Trivago, Starbucks, Pinterest, and Uber.
+                </h2>
+                <p></p>
+                <h1 class="title">
+                    Hybrid App Development
+                </h1>
+                <p></p>
+                <h2 class="subtitle privacy-h2">
+                    In contrast to PWAs, hybrid mobile apps also allow for your organization to communicate with your customers, congregation, ministry target area, mission field, or within your organization. Hybrid mobile apps tend to be larger file sizes and require users to find the app on the respective app stores and download them to their device. Hybrid mobile apps are more popular, but get downloaded much less frequently. Any updates to hybrid apps could take days due to app store approval times. However, hybrid mobile apps are a great option if you want users to have a more native app feel with more device hardware functionality. <br><br> Listed below are the app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to either the app stores or online as a PWA. Contact us through the contact page if you are interested in either PWA or hybrid mobile app development.
+                </h2><hr>
+                <p></p>
+                <h1 class="title">
+                    Pricing
+                </h1>
                 <div class="columns">
                     <div class="column">
+                        <p></p>
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-gears"></i>
-                                    Starter Package
+                                    <i class="fa-solid fa-brackets-curly"></i>&nbsp;
+                                    PWAs & Hybrid Apps
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
+                                    <h2><b>$75/mo.</b></h2>
                                     <h3>No setup fee!</h3>
-                                    <h3><b>$50 per month to develop for both Android and iOS</b></h3>
-                                    <h3>Deployment to the app stores</h3>
-                                    <h3>Simple app consisting of up to three (3) pages with tab navigation</h3>
-                                    <h3>One (1) major feature integration</h3>
-                                    <h3>$100 per feature for one (1) additional feature</h3>
+                                    <h3>Development for both PWA or Hybrid</h3>
+                                    <h3>Deployment to either the app stores or online</h3>
+                                    <h3>Up to ten (10) pages with tab and/or side menu navigation</h3>
+                                    <h3>$50 per page for additional pages</h3>
+                                    <h3>Up to (5) feature integrations</h3>
+                                    <h3>$50 per feature for additional features</h3>
                                     <h3>Periodic updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3LoHFsP" target="_blank"><b>Get Started!</b></a>
@@ -167,18 +187,20 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-star"></i>
-                                    Basic Package
+                                    <i class="fa-solid fa-boxes-stacked"></i>&nbsp;
+                                    Mobile App Bundle
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    <h3>No setup fee!</h3>
-                                    <h3><b>$125 per month to develop for both Android and iOS</b></h3>
-                                    <h3>Deployment to the app stores</h3>
-                                    <h3>Up to ten (10) pages with option for side menu navigation as well as tabs</h3>
-                                    <h3>Up to three (3) major feature integrations</h3>
-                                    <h3>$100 per feature for up to two (2) additional features</h3>
+                                    <h2><b>$50/mo. per app</b></h2>
+                                    <h3>Two or more apps developed</h3>
+                                    <h3>Development for both PWA or Hybrid</h3>
+                                    <h3>Deployment to either the app stores or online</h3>
+                                    <h3>Up to ten (10) pages with tab and/or side menu navigation</h3>
+                                    <h3>$50 per page for additional pages</h3>
+                                    <h3>Up to (5) feature integrations</h3>
+                                    <h3>$50 per feature for additional features</h3>
                                     <h3>Periodic updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3BqNWzs" target="_blank"><b>Get Started!</b></a>
@@ -192,18 +214,19 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-briefcase"></i>
-                                    Pro Package
+                                    <i class="fa-solid fa-star"></i>&nbsp;
+                                    Mobile App & Website Bundle
                                 </p>
                             </header>
                             <div class="card-content">
                                 <div class="content">
+                                    <h2><b>$50/mo.</b></h2>
                                     <h3>No setup fee!</h3>
-                                    <h3><b>$200 per month to develop for both Android and iOS</b></h3>
-                                    <h3>Deployment to the app stores</h3>
-                                    <h3>More than ten (10) pages with any navigation option</h3>
-                                    <h3>Up to five (5) major feature integrations</h3>
-                                    <h3>$100 per feature for unlimited additional features</h3>
+                                    <h3>Price is per app and website</h3>
+                                    <h3>Development for either PWA or Hybrid and Website</h3>
+                                    <h3>Deployment to the app stores and online</h3>
+                                    <h3>Same features as PWA & Hybrid App Plan</h3>
+                                    <h3>Same features as Website Development Plan</h3>
                                     <h3>Periodic updates made as needed to publish updated content.</h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3BJp4Dx" target="_blank"><b>Get Started!</b></a>
