--- a/products.html
+++ b/products.html
@@ -18,9 +18,14 @@
         <link rel="icon" href="./images/favicon.ico" />
         <link rel="stylesheet" href="./styles/styles.css" />
         <link rel="stylesheet" defer href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-        <link rel="stylesheet" defer href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script src="./scripts/scripts.js"></script>
-        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+        
+        <!-- Font Awesome for Deployment -->
+        <script src="https://kit.fontawesome.com/1f7c331935.js" crossorigin="anonymous"></script>
+
+        <!-- Font Awesome for Development - COMMENT OUT WHEN LIVE -->
+        <!-- <link rel="stylesheet" defer href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script> -->
     </head>
 
     <body>
@@ -142,7 +147,7 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-bullhorn"></i>
+                                    <i class="fa-solid fa-bullhorn"></i>&nbsp;
                                     Simple Evangelism
                                 </p>
                             </header>
@@ -177,7 +182,7 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
-                                    <i class="fa-solid fa-brain"></i>
+                                    <i class="fa-solid fa-brain"></i>&nbsp;
                                     Memory Brain Game
                                 </p>
                             </header>
