Updated contract links

--- a/apps.html
+++ b/apps.html
@@ -176,7 +176,7 @@
                                     <h3>$50 per feature for additional features</h3>
                                     <h3>Periodic updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3LoHFsP" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button" href="https://bit.ly/3T5lbQ1" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -203,7 +203,7 @@
                                     <h3>$50 per feature for additional features</h3>
                                     <h3>Periodic updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3BqNWzs" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button" href="https://bit.ly/3RMey48" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -215,7 +215,7 @@
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
                                     <i class="fa-solid fa-star"></i>&nbsp;
-                                    Mobile App & Website Bundle
+                                    App & Website Bundle
                                 </p>
                             </header>
                             <div class="card-content">
@@ -229,7 +229,7 @@
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Periodic updates made as needed to publish updated content.</h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3BJp4Dx" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button" href="https://bit.ly/3fSxIbx" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
