--- a/websites.html
+++ b/websites.html
@@ -157,10 +157,10 @@
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Fees, and Periodic Updates</b></h3>
                                     <h3>Fifteen (15) page limit</h3>
                                     <h3>$50 per page for development <br> over the 15 page limit as a one-time charge</h3>
-                                    <h3>$50 for annual hosting renewal</h3>
+                                    <h3>No annual hosting renewal fee!</h3>
                                     <h3><b><i>BEST OVERALL VALUE!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3UcGXTz" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button" href="https://bit.ly/3ekiZWf" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -187,7 +187,7 @@
                                     <h3>Periodic updates made as needed to publish updated content.</h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button" href="https://bit.ly/3BJp4Dx" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button" href="https://bit.ly/3fSxIbx" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -209,6 +209,7 @@
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
                                     <h3>Ten (10) page minimum</h3>
                                     <h3>Optional $50 per month for maintenance and updates</h3>
+                                    <h3>$50 per year for hosting (if needed)</h3>
                                     <h3><b><i>BEST VALUE FOR SELF MANAGEMENT!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3xwkR4D" target="_blank"><b>Get Started!</b></a>
@@ -230,7 +231,7 @@
                                     <h2><b>$500 for Development</b></h2>
                                     <h3>$100 one-time setup fee</h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Domain Setup, and Hosting Setup</b></h3>
-                                    <h3>$50 per year for hosting</h3>
+                                    <h3>$50 per year for hosting (if needed)</h3>
                                     <h3><b><i>BEST VALUE FOR A SIMPLE ONE-PAGE SITE!</i></b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button" href="https://bit.ly/3yfJTFk" target="_blank"><b>Get Started!</b></a>
