Updated focus & added pricing info

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <img class="home-image" src="./images/header.webp" width="500" height="281" alt="Our logo">
                     </picture><br>
                     <h1 class="title white-text">
-                        Quality Mobile Apps,  Websites, & Graphic Design!
+                        Quality Mobile Apps, Websites, & Graphic Design!
                     </h1>
                 </div>    
             </div>     
@@ -137,7 +137,7 @@
                             Who We Are
                         </h2>
                         <h4 class="subtitle justify">
-                            We are a technology company that strives to glorify God through the creation and distribution of quality mobile apps, websites, and graphic design for small businesses, churches, ministries, missionaries, and non-profit organizations. 
+                            We are a technology company that strives to glorify God through the creation and distribution of quality mobile apps, websites, and graphic design for churches, ministries, missionaries, and religious non-profit organizations. 
                         </h4>
                         <h4 class="subtitle">
                             Our four core values are:
@@ -180,7 +180,7 @@
                             Mobile Apps
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer progressive web apps (PWAs) and hybrid mobile app development for small businesses, churches, ministries, missionaries, and non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions for both ministry purposes and entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed either as PWAs or hybrid mobile apps. PWAs are deployed online and hybrid apps are deployed to both the Google Play Store and the Apple App Store.
+                            We offer progressive web apps (PWAs) and hybrid mobile app development for churches, ministries, missionaries, and religious non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions for both ministry purposes and entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed either as PWAs or hybrid mobile apps. PWAs are deployed online and hybrid apps are deployed to both the Google Play Store and the Apple App Store.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
                         <b>About Mobile App Development</b>
@@ -198,7 +198,7 @@
                             Website Development
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer the design and development of custom websites for any small business, church, ministry, missionary/church planter, or non-profit organization interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development and site maintenance.
+                            We offer the design and development of custom websites for any church, ministry, missionary/church planter, or religious non-profit organization interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development and site maintenance.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/websites.html">
                             <b>About Website Development</b>
@@ -230,7 +230,7 @@
                             Graphic Design
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Quality graphic work allows your small business, organization, church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! Custom graphic design can enable you to effectively communicate, give out information, and connect with others. <br><br> Pricing is dependent upon which type of graphic design you are needing. We can do most graphic work including logo creation, graphics for printables including flyers, brochures, banners, and door hangers. We also provide graphics for your social media page profile.
+                            We offer a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Quality graphic work allows your church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! Custom graphic design can enable you to effectively communicate, give out information, and connect with others. <br><br> Pricing is dependent upon which type of graphic design you are needing. We can do most graphic work including logo creation, graphics for printables including flyers, brochures, banners, and door hangers. We also provide graphics for your social media page profile.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/graphic-design.html">
                         <b>About Graphic Design</b>
@@ -251,7 +251,9 @@
                             We value our clients and seek to offer them our products and services to the best of our ability. Here's what some of them have to say about our services:
                         </h4>
                         <h4>
-                            <i>Justin has built and maintained four websites for the ministries I lead or in which I am involved. Each website is first class! When I have called upon him to update the websites, he always does so within the same day as I make my request. Justin also created an app for one of our ministries. It too is very professionally designed and connected to our website. So, when our website is updated, our app is automatically updated. Justin is thoughtful in his designs and is detail oriented. He thinks about things that would never cross my mind. I highly recommend him to design and maintain your website or app!</i><br><br><b>Jerry Fulton - Editor, Baptist Progress and Pastor, FBC Rice</b>
+                            <i>
+                                Justin has built and maintained four websites for the ministries I lead or in which I am involved. Each website is first class! When I have called upon him to update the websites, he always does so within the same day as I make my request. Justin also created an app for one of our ministries. It too is very professionally designed and connected to our website. So, when our website is updated, our app is automatically updated. Justin is thoughtful in his designs and is detail oriented. He thinks about things that would never cross my mind. I highly recommend him to design and maintain your website or app!
+                            </i><br><br><b>Jerry Fulton - Editor, Baptist Progress and Pastor, FBC Rice</b>
                         </h4><hr>
                         <h4>
                             <i>
