--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Kingdom Application Solutions LLC is a technology company that strives to glorify God through the creation and distribution of quality software applications. We seek to aid any organization, small or large, that needs and desires mobile app development, website development, or graphic design. We aim to make these services more accessible especially to small businesses, churches, ministries, missionaries, and religious non-profit organizations.
+                    Kingdom Application Solutions LLC is a technology company that strives to glorify God through the creation and distribution of quality software applications. We seek to aid any organization, small or large, that needs and desires mobile app development, website development, or graphic design. We aim to make these services more accessible especially to churches, ministries, missionaries, and religious non-profit organizations.
 
                     Our goal is to provide quality mobile apps and website development either through a content management system or with custom HTML to deploy to your domain. Our user-friendly mobile apps will be deployed either as progressive web apps (PWAs) or as hybrid apps on both the Google Play Store and the Apple App Store. Our websites are hosted on a fast server with little to no downtime. Our graphic design services are all custom and include things such as logos, graphics for printables, or brochures.
                 </h2><br>
