--- a/apps.html
+++ b/apps.html
@@ -132,7 +132,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring affordable mobile app development to small businesses, medium-sized organizations, churches, ministries, missionaries, and religious non-profit organizations. Often mobile app development costs tens of thousands of dollars which smaller organizations cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
+                    Mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring affordable mobile app development to churches, ministries, missionaries, and religious non-profit organizations. Often mobile app development costs tens of thousands of dollars which churches cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
                 </h2>
                 <p></p>
                 <h1 class="title">
@@ -140,7 +140,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A progressive web app (PWA) for your organization can enable you to effectively communicate with your customers, congregation, ministry target area, mission field, or within your organization. PWAs are lighter than hybrid mobile apps, are installed from a web browser rather than an app store, and allow for more instant updates without app store waiting times. PWAs are also easier to find through web searches than hybrid apps. PWAs can do much of the same things hybrid apps can do including receive push notifications and utilize some device hardware. Progressive web apps are becoming much more popular especially considering that 51% of smartphone users have downloaded zero apps from app stores each month. Some examples of organizations using PWAs include Trivago, Starbucks, Pinterest, and Uber.
+                    A progressive web app (PWA) for your church or ministry can enable you to effectively communicate with your congregation, ministry target area, or mission field. PWAs are lighter than hybrid mobile apps, are installed from a web browser rather than an app store, and allow for more instant updates without app store waiting times. PWAs are also easier to find through web searches than hybrid apps. PWAs can do much of the same things hybrid apps can do including receive push notifications and utilize some device hardware. Progressive web apps are becoming much more popular especially considering that 51% of smartphone users have downloaded zero apps from app stores each month. Some examples of organizations using PWAs include Trivago, Starbucks, Pinterest, and Uber.
                 </h2>
                 <p></p>
                 <h1 class="title">
@@ -148,7 +148,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    In contrast to PWAs, hybrid mobile apps also allow for your organization to communicate with your customers, congregation, ministry target area, mission field, or within your organization. Hybrid mobile apps tend to be larger file sizes and require users to find the app on the respective app stores and download them to their device. Hybrid mobile apps are more popular, but get downloaded much less frequently. Any updates to hybrid apps could take days due to app store approval times. However, hybrid mobile apps are a great option if you want users to have a more native app feel with more device hardware functionality. <br><br> Listed below are the app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to either the app stores or online as a PWA. Contact us through the contact page if you are interested in either PWA or hybrid mobile app development.
+                    In contrast to PWAs, hybrid mobile apps also allow for your church or ministry to communicate with your congregation, ministry target area, or mission field. Hybrid mobile apps tend to be larger file sizes and require users to find the app on the respective app stores and download them to their device. Hybrid mobile apps are more popular, but get downloaded much less frequently. Any updates to hybrid apps could take days due to app store approval times. However, hybrid mobile apps are a great option if you want users to have a more native app feel with more device hardware functionality. <br><br> Listed below are the app development packages Kingdom Application Solutions LLC offers to get your mobile app up and running and deployed to either the app stores or online as a PWA. Contact us through the contact page if you are interested in either PWA or hybrid mobile app development.
                 </h2><hr>
                 <p></p>
                 <h1 class="title">
@@ -171,7 +171,7 @@
                                     <h3>Development for both PWA or Hybrid</h3>
                                     <h3>Deployment to either the app stores or online</h3>
                                     <h3>Up to ten (10) pages with tab and/or side menu navigation</h3>
-                                    <h3>$50 per page for additional pages</h3>
+                                    <h3>Additional $25 per month for apps over the page limit</h3>
                                     <h3>Up to (5) feature integrations</h3>
                                     <h3>$50 per feature for additional features</h3>
                                     <h3>Periodic updates made as needed to publish updated content</h3><br>
@@ -198,7 +198,7 @@
                                     <h3>Development for both PWA or Hybrid</h3>
                                     <h3>Deployment to either the app stores or online</h3>
                                     <h3>Up to ten (10) pages with tab and/or side menu navigation</h3>
-                                    <h3>$50 per page for additional pages</h3>
+                                    <h3>Additional $25 per month for apps over the page limit</h3>
                                     <h3>Up to (5) feature integrations</h3>
                                     <h3>$50 per feature for additional features</h3>
                                     <h3>Periodic updates made as needed to publish updated content</h3><br>
