--- a/graphic-design.html
+++ b/graphic-design.html
@@ -119,7 +119,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Graphic Design for Your Organization!  
+                        Graphic Design for Your Church or Ministry!  
                     </h1>
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
@@ -133,7 +133,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Quality graphic work allows your small business, organization, church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! Along with mobile app development and website development, Kingdom Application Solutions LLC provides a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Custom graphic design can enable you to effectively communicate, give out information, and connect with others.
+                    Quality graphic work allows your church, ministry, or religious non-profit to stand apart from the rest and make a greater impact! Along with mobile app development and website development, Kingdom Application Solutions LLC provides a wide range of graphic design options. Whether you need a logo, printable graphics, or social media graphics, we can help! Custom graphic design can enable you to effectively communicate, give out information, and connect with others.
                 </h2><br>
                 <h1 class="title">
                     Pricing
