--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -135,14 +135,14 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps, custom website design & development, and graphic design work.
+                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps, website design & development, and graphic design work.
                 </h2><br><hr>
                 <h1 class="title">
                     Our Vision
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC envisions a global impact from its products and services. We envision aiding small businesses, churches, ministries, missionaries, and other non-profit organizations in reaching their customers and congregations better to further their organizational goals and mission. 
+                    Kingdom Application Solutions LLC envisions a global impact from its products and services. We envision aiding churches, ministries, missionaries, and other religious non-profit organizations in communicating with their congregations better and reach people with the love of Christ. 
                 </h2><br><hr>
                 <h1 class="title">
                     Our Values
@@ -192,7 +192,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    Our company exists to help small businesses, churches, ministries, missionaries, and non-profit organizations have access to quality made websites, mobile apps, and graphic design. We make every decision and measure every outcome based on how well it serves our clients and how it builds the Kingdom. We listen to our clients’ needs, provide options, and deliver beyond their expectations.
+                                    Our company exists to help churches, ministries, missionaries, and religious non-profit organizations have access to quality made websites, mobile apps, and graphic design. We make every decision and measure every outcome based on how well it serves our clients and how it builds the Kingdom. We listen to our clients’ needs, provide options, and deliver beyond their expectations.
                                 </div>
                             </div>
                         </div>
